Trial 1 with css

--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@
     <title>Certificate of Registration</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <div class="container">
+        <h1 class="title">Palawan State University</h1>
+        <h2 class="sub-title">CERTIFICATE OF REGISTRATION</h2>
+    </div>
+</body>
 </html>
