Adding Logo and more

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">Palawan State University</h1>
-        <h2 class="sub-title">CERTIFICATE OF REGISTRATION</h2>
-    </div>
+    <div class="header">
+        <img src="PSU.png" alt="Palawan State University Logo" class="logo">
+        <div class="header-text">
+            <p class="republic">Republic of the Philippines</p>
+            <h1 class="title">Palawan State University</h1>
+            <p class="city">Puerto Princesa City</p>
+            <h2 class="sub-title">CERTIFICATE OF REGISTRATION</h2>
+        </div>
+    </div>    
 </body>
 </html>
