--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
             <p class="city">Puerto Princesa City</p>
             <h2 class="sub-title">CERTIFICATE OF REGISTRATION</h2>
         </div>
-    </div>    
+    </div>
+    <div class="student-info">
+        <p><strong>Student No:</strong> 2022-8-0119</p>
+        <p><strong>Name:</strong> MONTALLANA, ZURIEL HELSI GALLARDO</p>
+        <p><strong>College:</strong> College of Sciences</p>
+        <p><strong>Program:</strong> BS Information Technology</p>
+        <p><strong>Age:</strong> 24</p>
+        <p><strong>School Year:</strong> 2024-2025 FIRST SEMESTER</p>
+    </div>        
 </body>
 </html>
