Test of adding Subjects column and rows

--- a/index.html
+++ b/index.html
@@ -23,6 +23,38 @@
         <p><strong>Program:</strong> BS Information Technology</p>
         <p><strong>Age:</strong> 24</p>
         <p><strong>School Year:</strong> 2024-2025 FIRST SEMESTER</p>
-    </div>        
+    </div>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Code</th>
+                <th>Subject Title</th>
+                <th>Unit</th>
+                <th>Schedule/Room</th>
+                <th>Section</th>
+                <th>Instructor</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>IT 8L</td>
+                <td>Advanced Database Systems</td>
+                <td>3.0</td>
+                <td>M 07:30 AM - 10:30 AM / MTC 2</td>
+                <td>BSIT3B1</td>
+                <td>Lopez, Menchie L.</td>
+            </tr>
+            <tr>
+                <td>IT 9L</td>
+                <td>Network Technologies 2</td>
+                <td>3.0</td>
+                <td>W 07:30 AM - 09:30 AM / CLT 1</td>
+                <td>BSIT3B1</td>
+                <td>Baguio, Kim C.</td>
+            </tr>
+        </tbody>
+    </table>
+            
 </body>
 </html>
