--- a/index.html
+++ b/index.html
@@ -28,30 +28,101 @@
     <table>
         <thead>
             <tr>
-                <th>Code</th>
-                <th>Subject Title</th>
-                <th>Unit</th>
-                <th>Schedule/Room</th>
-                <th>Section</th>
-                <th>Instructor</th>
+                <th rowspan="2">Code</th>
+                <th rowspan="2">Subject Title</th>
+                <th colspan="3">Unit</th> 
+                <th rowspan="2">Section</th>
+                <th rowspan="2">Schedule/Room</th>
+                <th rowspan="2">Faculty Signature</th>
             </tr>
-        </thead>
+            <tr>
+                <th>Lec</th>
+                <th>Lab</th>
+                <th>Credit</th>
+            </tr>
+        </thead>    
         <tbody>
             <tr>
-                <td>IT 8L</td>
+                <td>IT 8/L</td>
                 <td>Advanced Database Systems</td>
+                <td>2.0</td>
+                <td>1.0</td>
                 <td>3.0</td>
-                <td>M 07:30 AM - 10:30 AM / MTC 2</td>
                 <td>BSIT3B1</td>
+                <td>M 07:30 AM - 10:30 AM / <br>
+                    MTC 2 W 07:30 AM - 09:30 AM / CL 1
+                </td>
                 <td>Lopez, Menchie L.</td>
             </tr>
             <tr>
-                <td>IT 9L</td>
+                <td>IT 9/L</td>
                 <td>Network Technologies 2</td>
+                <td>2.0</td>
+                <td>1.0</td>
                 <td>3.0</td>
-                <td>W 07:30 AM - 09:30 AM / CLT 1</td>
                 <td>BSIT3B1</td>
+                <td>M 11:30 AM - 01:30 AM / CL 2 <br>
+                    W 10:30 AM - 01:30 PM / MTC 2
+                </td>
                 <td>Baguio, Kim C.</td>
+            </tr>
+            <tr>
+                <td>IT 10/L</td>
+                <td>Information Assurance and Security 1</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT3B1</td>
+                <td>M 01:30 PM - 04:30 PM / NIT 3 <br>
+                    W 01:30 PM - 03:00 PM / CL 1
+                </td>
+                <td>Pabilona, Tiffany</td>
+            </tr>
+            <tr>
+                <td>IT 11/L</td>
+                <td>Web Systems and Technologies</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT3B1</td>
+                <td>T 01:30 PM - 4:30 PM / IT 101 <br>
+                    Th 11:30 AM - 01:30 PM / CL 1
+                </td>
+                <td>Dosado, Roy Cyril D.</td>
+            </tr>
+            <tr>
+                <td>IT 12/L</td>
+                <td>Multimedia Systems</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT3B1</td>
+                <td>T 10:30 AM - 12:30 PM / NIT 1 <br>
+                    Th 01:30 PM - 04:30 PM / MTC 2
+                </td>
+                <td>Buliag, Rene V.</td>
+            </tr>
+            <tr>
+                <td>GE-ET</td>
+                <td>Ethics</td>
+                <td>3.0</td>
+                <td>0.0</td>
+                <td>3.0</td>
+                <td>BSIT3B1</td>
+                <td>MW 04:30 PM - 06:00 PM / IT ROOM 1</td>
+                <td>Frondozo, Noel Gabuco</td>
+            </tr>
+            <tr>
+                <td>IT E3/L</td>
+                <td>IT Elective 3</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT3B1</td>
+                <td>T 04:30 PM - 07:30 PM / IT 101 <br>
+                    Th 05:30 PM - 07:30 PM / CL 3
+                </td>
+                <td>Dizon, Demy R.</td>
             </tr>
         </tbody>
     </table>
