Additional changes and added registration number

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <h1 class="title">Palawan State University</h1>
             <p class="city">Puerto Princesa City</p>
             <h2 class="sub-title">CERTIFICATE OF REGISTRATION</h2>
+            <p class="registration-number">Registration No: 000366220</p>
         </div>
     </div>
     <div class="student-info">
         <p><strong>Student No:</strong> 2022-8-0119</p>
-        <p><strong>Name:</strong> MONTALLANA, ZURIEL HELSI GALLARDO</p>
+        <p><strong>Name:</strong> MONTALLANA, ZURIEL HEISLI GALLARDO</p>
         <p><strong>College:</strong> College of Sciences</p>
         <p><strong>Program:</strong> BS Information Technology</p>
         <p><strong>Age:</strong> 24</p>
