Fixing Student General Information and adding css

--- a/index.html
+++ b/index.html
@@ -17,14 +17,36 @@
             <p class="registration-number">Registration No: 000366220</p>
         </div>
     </div>
-    <div class="student-info">
-        <p><strong>Student No:</strong> 2022-8-0119</p>
-        <p><strong>Name:</strong> MONTALLANA, ZURIEL HEISLI GALLARDO</p>
-        <p><strong>College:</strong> College of Sciences</p>
-        <p><strong>Program:</strong> BS Information Technology</p>
-        <p><strong>Age:</strong> 24</p>
-        <p><strong>School Year:</strong> 2024-2025 FIRST SEMESTER</p>
+    <div class="student-info-container">
+        <table class="student-info-table">
+            <thead>
+                <tr>
+                    <th colspan="4" class="student-info-header">STUDENT GENERAL INFORMATION</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>Student No:</strong> 2022-8-0119</td>
+                    <td><strong>College:</strong> College of Sciences</td>
+                    <td><strong>School Year:</strong> 2024-2025 FIRST SEMESTER</td>
+                </tr>
+                <tr>
+                    <td><strong>Name:</strong> MONTALLANA, ZURIEL HEISLI GALLARDO</td>
+                    <td><strong>Program:</strong> Bachelor of Science in Information Technology</td>
+                    <td><strong>Curriculum:</strong> 08-BSIT-2019</td>
+                </tr>
+                <tr>
+                    <td><strong>Gender:</strong> Male</td>
+                    <td><strong>Age:</strong> 24</td>
+                    <td><strong>Year Level:</strong> 3rd Year</td>
+                </tr>
+                <tr>
+                    <td colspan="4"><strong>Scholarship:</strong></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+    
     
     <table>
         <thead>
