Major adjustments on css and adding additional information

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         </table>
     </div>
     
-    
-    <table>
+    <table class="subjects-table">
         <thead>
             <tr>
                 <th rowspan="2">Code</th>
@@ -146,6 +145,13 @@
                     Th 05:30 PM - 07:30 PM / CL 3
                 </td>
                 <td>Dizon, Demy R.</td>
+            </tr>
+            <tr>
+                <td colspan="2" class="total-label">Total Unit(s)</td>
+                <td>15.0</td>
+                <td>6.0</td>
+                <td>21.0</td>
+                <td colspan="4" class="note">Note: Subjects marked with *** are Special Subjects.</td>
             </tr>
         </tbody>
     </table>
