Major changes and adjusting text lines. Finalizing html and css

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>M 11:30 AM - 01:30 AM / CL 2 <br>
-                    W 10:30 AM - 01:30 PM / MTC 2
+                <td>M 11:30 AM - 01:30 AM / CL 2 <br> W 10:30 AM - 01:30 PM / MTC 2
                 </td>
                 <td>Baguio, Kim C.</td>
             </tr>
@@ -94,8 +93,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>M 01:30 PM - 04:30 PM / NIT 3 <br>
-                    W 01:30 PM - 03:00 PM / CL 1
+                <td>M 01:30 PM - 04:30 PM / NIT 3 <br> W 01:30 PM - 03:00 PM / CL 1
                 </td>
                 <td>Pabilona, Tiffany</td>
             </tr>
@@ -106,8 +104,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>T 01:30 PM - 4:30 PM / IT 101 <br>
-                    Th 11:30 AM - 01:30 PM / CL 1
+                <td>T 01:30 PM - 4:30 PM / IT 101 <br> Th 11:30 AM - 01:30 PM / CL 1
                 </td>
                 <td>Dosado, Roy Cyril D.</td>
             </tr>
@@ -118,8 +115,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>T 10:30 AM - 12:30 PM / NIT 1 <br>
-                    Th 01:30 PM - 04:30 PM / MTC 2
+                <td>T 10:30 AM - 12:30 PM / NIT 1 <br> Th 01:30 PM - 04:30 PM / MTC 2
                 </td>
                 <td>Buliag, Rene V.</td>
             </tr>
@@ -140,8 +136,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>T 04:30 PM - 07:30 PM / IT 101 <br>
-                    Th 05:30 PM - 07:30 PM / CL 3
+                <td>T 04:30 PM - 07:30 PM / IT 101 <br> Th 05:30 PM - 07:30 PM / CL 3
                 </td>
                 <td>Dizon, Demy R.</td>
             </tr>
@@ -262,9 +257,20 @@
                     <li>50% refund - Within 2 weeks from the start of classes.</li>
                     <li>No refund - After the 2nd week of classes.</li>
                 </ol>
-            </div>
-        </div>
+                <div class="official-receipt">
+                    <p><strong>Official Receipt:</strong> ____________</p>
+                    <p><strong>Payment / Validation Date:</strong> 02-Aug-2024 9:49 AM</p>
+                </div>
+                <div class="approved-by">
+                    <p><strong>APPROVED BY:</strong></p>
+                    <p>CHERYLL ANNE C. DATOR, Ph.D.<br>
+                    University Registrar</p>
+                </div>
+            </div>            
+        </div>  
     </section>
-    
+    <div class="keep-certificate">
+        <p>KEEP THIS CERTIFICATE, YOU WILL BE REQUIRED TO PRESENT THIS IN ALL YOUR DEALINGS WITH THE COLLEGE.</p>
+    </div>
 </body>
 </html>
