--- a/index.html
+++ b/index.html
@@ -154,12 +154,10 @@
     <section class="fees-and-payments">
         <div class="flex-container">
             <div class="assessed-fees">
-                <h2>Assessed Fees</h2>
                 <table class="assessed-fees-table">
                     <thead>
                         <tr>
-                            <th>Fee</th>
-                            <th>Amount</th>
+                            <th>Assessed Fees</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -217,33 +215,30 @@
                             <td><strong>Total Assessment:</strong></td>
                             <td id="total-assessment"><strong>8,490.00</strong></td>
                         </tr>
+                        <tr>
+                            <td><strong>Total Payment:</strong></td>
+                            <td id="total-assessment"><strong>0.00</strong></td>
+                        </tr>
+                            <td><strong>Outstanding Balance:</strong></td>
+                            <td id="total-assessment"><strong>8,490.00</strong></td>
+                        </tr>
                     </tfoot>
                 </table>
 
-                <h2>Schedule of Payment</h2>
                 <table class="payment-schedule">
-                    <thead>
-                        <tr>
-                            <th>Payment No.</th>
-                            <th>Due Date</th>
-                            <th>Amount</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                    <tr>
+                        <td>Schedule of Payment</td>
+                    </tr>
                         <tr>
                             <td>1st Pymt / Due Date</td>
-                            <td>05/12/2024</td>
-                            <td>3,390.00</td>
-                        </tr>
-                        <tr>
                             <td>2nd Pymt / Due Date</td>
-                            <td>08/25/2024</td>
-                            <td>2,520.00</td>
-                        </tr>
-                        <tr>
                             <td>3rd Pymt / Due Date</td>
-                            <td>11/29/2024</td>
-                            <td>2,580.00</td>
+                        </tr>
+                    <tbody>
+                        <tr>
+                            <td>3,390.00 05/12/2024</td>
+                            <td>2,520.00 08/25/2024</td>
+                            <td>2,580.00 11/29/2024</td>
                         </tr>
                     </tbody>
                 </table>
