Testing of Blue Background on specific Texts

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <table class="assessed-fees-table">
                     <thead>
                         <tr>
-                            <th>Assessed Fees</th>
+                            <th colspan="2" class="assessed-fees-header">Assessed Fees</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -213,27 +213,30 @@
                     <tfoot>
                         <tr>
                             <td><strong>Total Assessment:</strong></td>
-                            <td id="total-assessment"><strong>8,490.00</strong></td>
+                            <td><strong>8,490.00</strong></td>
                         </tr>
                         <tr>
                             <td><strong>Total Payment:</strong></td>
-                            <td id="total-assessment"><strong>0.00</strong></td>
+                            <td><strong>0.00</strong></td>
                         </tr>
+                        <tr>
                             <td><strong>Outstanding Balance:</strong></td>
-                            <td id="total-assessment"><strong>8,490.00</strong></td>
+                            <td><strong>8,490.00</strong></td>
                         </tr>
                     </tfoot>
                 </table>
 
                 <table class="payment-schedule">
-                    <tr>
-                        <td>Schedule of Payment</td>
-                    </tr>
+                    <thead>
                         <tr>
-                            <td>1st Pymt / Due Date</td>
-                            <td>2nd Pymt / Due Date</td>
-                            <td>3rd Pymt / Due Date</td>
+                            <th colspan="3" class="light-blue-bg">Schedule of Payment</th>
                         </tr>
+                        <tr>
+                            <th>1st Pymt / Due Date</th>
+                            <th>2nd Pymt / Due Date</th>
+                            <th>3rd Pymt / Due Date</th>
+                        </tr>
+                    </thead>
                     <tbody>
                         <tr>
                             <td>3,390.00 05/12/2024</td>
