Final No Errors and Warnings

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>M 11:30 AM - 01:30 AM / CL 2 <br> W 10:30 AM - 01:30 PM / MTC 2
-                </td>
+                <td>M 11:30 AM - 01:30 AM / CL 2 <br> W 10:30 AM - 01:30 PM / MTC 2 </td>
                 <td>Baguio, Kim C.</td>
             </tr>
             <tr>
@@ -96,8 +95,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>M 01:30 PM - 04:30 PM / NIT 3 <br> W 01:30 PM - 03:00 PM / CL 1
-                </td>
+                <td>M 01:30 PM - 04:30 PM / NIT 3 <br> W 01:30 PM - 03:00 PM / CL 1 </td>
                 <td>Pabilona, Tiffany</td>
             </tr>
             <tr>
@@ -107,8 +105,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>T 01:30 PM - 4:30 PM / IT 101 <br> Th 11:30 AM - 01:30 PM / CL 1
-                </td>
+                <td>T 01:30 PM - 4:30 PM / IT 101 <br> Th 11:30 AM - 01:30 PM / CL 1 </td>
                 <td>Dosado, Roy Cyril D.</td>
             </tr>
             <tr>
@@ -118,8 +115,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>T 10:30 AM - 12:30 PM / NIT 1 <br> Th 01:30 PM - 04:30 PM / MTC 2
-                </td>
+                <td>T 10:30 AM - 12:30 PM / NIT 1 <br> Th 01:30 PM - 04:30 PM / MTC 2 </td>
                 <td>Buliag, Rene V.</td>
             </tr>
             <tr>
@@ -139,8 +135,7 @@
                 <td>1.0</td>
                 <td>3.0</td>
                 <td>BSIT3B1</td>
-                <td>T 04:30 PM - 07:30 PM / IT 101 <br> Th 05:30 PM - 07:30 PM / CL 3
-                </td>
+                <td>T 04:30 PM - 07:30 PM / IT 101 <br> Th 05:30 PM - 07:30 PM / CL 3 </td>
                 <td>Dizon, Demy R.</td>
             </tr>
             <tr>
@@ -154,6 +149,10 @@
             </tr>
             <tr>
                 <td colspan="4" class="note">Note: Subjects marked with *** are Special Subjects.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </tbody>
     </table>
